--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ pydantic_core==2.41.5
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+playwright>=1.40.0
+openai>=1.0.0
+python-dotenv>=1.0.0
+numpy>=1.24.0
+supabase>=2.0.0
